--- a/code/frontend/src/app/pages/messages/messages.component.scss
+++ b/code/frontend/src/app/pages/messages/messages.component.scss
@@ -1,8 +1,4 @@
-.page-container {
-  padding: 24px;
-  max-width: 1400px;
-  margin: 0 auto;
-}
+// .page-container está definido em shared/styles/layout.scss
 
 .page-header {
   margin-bottom: 32px;
@@ -277,6 +273,19 @@
 }
 
 .message-icon {
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  
+  svg,
+  [innerHTML] svg {
+    width: 24px;
+    height: 24px;
+    display: block;
+  }
   font-size: 24px;
   margin-top: 4px;
 }
@@ -381,6 +390,19 @@
 }
 
 .empty-icon {
+  width: 48px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  
+  svg,
+  [innerHTML] svg {
+    width: 48px;
+    height: 48px;
+    display: block;
+  }
   font-size: 48px;
   margin-bottom: 16px;
 }
