--- a/code/frontend/src/app/pages/projects/projects.component.scss
+++ b/code/frontend/src/app/pages/projects/projects.component.scss
@@ -1,8 +1,4 @@
-.page-container {
-  padding: 24px;
-  max-width: 1200px;
-  margin: 0 auto;
-}
+// .page-container está definido em shared/styles/layout.scss
 
 .page-header {
   margin-bottom: 32px;
